--- a/Aprendendo_branch/style.css
+++ b/Aprendendo_branch/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    text-align: justify;
 }
 
 body {
@@ -11,6 +12,6 @@ main {
     background-color: azure;
     width: 500px;
     margin: auto;
-    box-shadow: 3px 3px 5px;
-    padding: 10px;
+    box-shadow: 5px 5px; color: red;
+    padding: 20px;
 }
