--- a/Aprendendo_branch/style.css
+++ b/Aprendendo_branch/style.css
@@ -1,7 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
-    text-align: justify;
+    text-align: justifY;
 }
 
 body {
@@ -14,4 +14,8 @@ main {
     margin: auto;
     box-shadow: 5px 5px; color: red;
     padding: 20px;
+}
+
+img {
+    width: 15%;
 }
